--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.16",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "dexie": "^4.2.0",
     "lucide-react": "^0.525.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
